--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
         <h1>Home</h1>
