--- a/birds.html
+++ b/birds.html
@@ -1,35 +1,64 @@
 <html>
     <head>
         <title>Birds</title>
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <!--information and pictures about ten birds. A page for each bird. Also, add sounds for at least three birds.-->
     </head>
     <body>
         <h1>Birds</h1>
-        <p>There are many birds.</p>
-        <!--Ariana if you are reading this, feel free to edit any of the birds-->
+        <p>While there is always something interesting to observe, you will find the greatest numbers 
+            of birds at the refuge from early November to late January. In the spring and fall, migratory bird species 
+            are moving through the refuge, resulting in high numbers of species. 
+        </p>
+        
         <p><a href="home.html">Back to home</a></p>
         <!--create a div for "FWS Focus" loads of the birds are labeled with this (CSS)-->
-        <div id="FWSFocus">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/FWS_Focus_2018.jpg/1200px-FWS_Focus_2018.jpg" alt="FWS Focus">
-            <p>FWS Focus</p>
-        </div>
+        <div id="FWSFocus"></div>
         <ol>
-            <li><h3>Golden Eagle</h3>
-        <!--Italicize the scientific name-->
+            <li><h3><a href="golden_eagle.html">Golden Eagle</a></h3>
+        <!--Italicize the scientific name--> 
             <h4>Aquila chysaetos</h4></li>
+        <!--format images-->
+            <img src="https://observation.org/media/photo/15930515.jpg" alt="Golden Eagle" height="150">
+            <h5>INFORMATION:</h5>
+            <p>
+                The golden eagle (Aquila chrysaetos) is a bird of prey that lives in the Northern Hemisphere. It is the most widespread species of eagle. 
+                Golden eagles are North America's largest predatory bird. They are dark brown with long, broad wings. Their length ranges from 70 to 84 cm,
+                and their wingspan ranges from 185 to 220 cm. Females are much larger than males. 
+            </p>
 
-            <li><h3>Burrowing Owl</h3>
+            <li><h3><a href="burrowing_owl.html"> Burrowing Owl</a></h3>
             <h4>Athene cuninularia</h4></li>
+            <img src="https://www.sdakotabirds.com/species/photos/burrowing_owl.jpg" alt="Burrowing Owl" height="150">
+            <h5>INFORMATION:</h5>
+            <p>These small, long-legged owls are found in open landscapes across North and South America. They live in areas with low vegetation,
+                 such as grasslands, deserts, and agricultural fields. They nest in underground burrows, often in abandoned mammal burrows. 
+            </p>
 
-            <li><h3>Chestnut-collared Longspur</h3>
+            <li><h3><a href="chesnut-collared_longspur.html">Chestnut-collared Longspur</a></h3>     
             <h4>Calcarius ornatus</h4></li>
+            <img src="https://cdn.download.ams.birds.cornell.edu/api/v1/asset/192902881/1200" alt="Chestnut-collared Longspur" height="150">
+            <h5>INFORMATION:</h5>
+            <p>The chestnut-collared longspur (Calcarius ornatus) is a small, ground-feeding bird that primarily eats seeds.
+                 They are a member of the Calcariidae family. They breed in prairie habitats in Canada and the northern United States, 
+                 and winter in the United States and Mexico. 
+            </p>
 
-            <li><h3>Semipalmated Sandpiper</h3>
+            <li><h3><a href="semipalmated_sandpiper.html">Semipalmated Sandpiper</a></h3>
             <h4>Calidris pusilla</h4></li>
-
-            <li><h3>Piping Plover</h3>
+            <img src="https://cdn.download.ams.birds.cornell.edu/api/v1/asset/64824491/1800" alt="semipalmated sandpiper" height="150">
+            <h5>INFORMATION:</h5>   
+            <P>
+                The semipalmated sandpiper (Calidris pusilla) is a small shorebird. The name "pusilla" is Latin for "very small". The genus name "kalidris" comes from Aristotle's term for some gray-colored waterside birds. 
+                </P>
+            <li><h3><a href="piping_plover.html">Piping Plover</a></h3>
             <h4>Charadrius melodus</h4></li>
-
+            <img src="https://www.sdakotabirds.com/species_photos/shorebirds_rails/piping_plover_5.jpg" alt="Piping Plover" height="150">
+            <h5>INFORMATION:</h5>
+            <p> It is a migratory bird that nests and feeds along coastal sand and gravel beaches in North America. 
+                The piping plover is about 7.25 inches (18 cm) long and weighs between 1.5 and 2.2 oz (43-63 grams). It has a short, stout bill and very pale upperparts that are the color of dry sand.
+            </p>
+            
             <li><h3>Black Tern</h3>
             <h4>Chlidonias niger</h4></li>
 
