--- a/home.html
+++ b/home.html
@@ -1,11 +1,13 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
         <h1>Home</h1>
-        <p>Home page</p>
+        <h2><a href="aboutUs.html">About Us</a></h2>
+        <h2><a href="whatWedo.html">What We Do</a></h2>
+        <h2></h2>
 
     </body>
 </html>
