added golden eagle excercises

--- a/golden_eagle.html
+++ b/golden_eagle.html
@@ -11,4 +11,5 @@
           These birds occupy a specific niche, but have also been known to take on much larger prey when the smaller prey is not available.  The trained Golden Eagles used by falconers have even been known to target large prey like gazelle, deer, goats, reindeer, and even wolf pups. 
          </p>
     </body>
+    <h3><a href="golden_eagle_excercises.html"> Excercises</a></h3>
 </html>
