added more excercises

--- a/golden_eagle_excercises.html
+++ b/golden_eagle_excercises.html
@@ -36,15 +36,15 @@
         <input type="checkbox" id="op2"> vegetables <br>
         <input type="checkbox" id="op3"> small mammals <br>
         <input type="checkbox" id="op4"> deer <br>
-        <label id="ans1"></label><br />
-        2) What bird species do Golden Eagles belong to?:<label id="p2"></label><br />
+        <label id="ans1"></label><br>
+        2) What bird species do Golden Eagles belong to?:<label id="p2"></label><br>
         <input type="text" id="txtbox1"><br>
-        <label id="ans2"></label><br />
+        <label id="ans2"></label><br>
         3) What are Golden eagles biggest predator?:<label id="p3"></label><br/>
         <input type="radio" id="rd1"> bears <br>
         <input type="radio" id="rd2"> humans <br>
         <input type="radio" id="rd3"> hawks <br>
-        <label id="ans3"></label><br />
+        <label id="ans3"></label><br>
         <input type="button" value="submit" onclick="f1()"><br>
     </body>
 </html>
