added links to excercises

--- a/burrowing_owl.html
+++ b/burrowing_owl.html
@@ -15,5 +15,6 @@
         Pesticide use
         Poisoning of prairie dog colonies
         In some areas, the burrowing owl is considered endangered or threatened.</p>
+        <h3><a href="burrowing_owl_excercises.html"> Exercises</a></h3>
     </body>
 </html>
