--- a/semipalmated_sandpiper.html
+++ b/semipalmated_sandpiper.html
@@ -8,5 +8,6 @@
         <p>Semipalmated sandpipers are grayish-brown in color and have a short neck and moderately long bill. They have black legs and a white belly. Their toes are slightly webbed, which helps them walk on mud without sinking. 
             Semipalmated sandpipers breed along the coast of the Hudson Bay and northern Alaska. During the non-breeding season, they migrate to coastal South America, the Caribbean, and Central America. They migrate through the eastern and central states, and occasionally through the west. 
             Semipalmated sandpipers are 6.25 inches long and weigh about 0.03 kg. Males and females look alike. </p>
+        <h3><a href="semipalmated_sandpiper_excercises.html"> Exercises</a></h3>
     </body>
 </html>
