done with excercises

--- a/black_tern_excercises.html
+++ b/black_tern_excercises.html
@@ -3,49 +3,47 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <script>
             function f1() {
-                if (rd1.checked) {
+                if (txtbox1.value == "freshwater marshes") {
                     p1.innerHTML = "Correct!"
                     p1.style.color = "green"
                 } else {
                     p1.innerHTML = "Incorrect"
                     p1.style.color = "red"
-                    ans3.innerHTML = "correct answer: True"
+                    ans1.innerHTML = "correct answer: freshwater marshes"
                 }
-                if (rd4.checked) {
+                if (txtbox2.value == "insects") {
                     p2.innerHTML = "Correct!"
                     p2.style.color = "green"
                 } else {
                     p2.innerHTML = "Incorrect"
                     p2.style.color = "red"
-                    ans2.innerHTML = "correct answer: False"
+                    ans2.innerHTML = "correct answer: insects"
                 }
-                if (rd5.checked) {
+                if (rd2.checked) {
                     p3.innerHTML = "Correct!"
                     p3.style.color = "green"
                 } else {
                     p3.innerHTML = "Incorrect"
                     p3.style.color = "red"
-                    ans3.innerHTML = "correct answer: True"
+                    ans3.innerHTML = "correct answer: False"
                 }
             }
         </script>
     </head>
 
     <body>
-        <h1>Chestnut-collared Longspurs Excercises</h1>
+        <h1>Black Tern Excercises</h1>
         <p>Answer each question and then hit submit to see your score and the correct answers. Goodluck!</p>
-        1) Chestnut-collared longspurs are locally abundant in the shortgrass and mixed-grass prairies of the Great
-        Plains <label id="p1"></label><br>
-        <input type="radio" id="rd1" name="tf1"> True <br>
-        <input type="radio" id="rd2" name="tf1"> False <br>
+        1) Fill in the blank: The Black Tern breeds in colonies in _________ _____ and ponds. <label id="p1"></label><br />
+        <input type="text" id="txtbox1"><br>
         <label id="ans1"></label><br>
-        2) Chestnut-collared longspurs can be found in mowed or burned grassland <label id="p2"></label><br>
-        <input type="radio" id="rd3" name="tf2"> True <br>
-        <input type="radio" id="rd4" name="tf2"> False <br>
+        2) Fill in the blank: The Black Tern eats ______ and freshwater fish during the breeding season<label id="p2"></label><br>
+        <input type="text" id="txtbox2"><br>
         <label id="ans2"></label><br>
-        3) Chestnut-collared longspurs are whitish, marked with brown, black, and purple <label id="p3"></label><br>
-        <input type="radio" id="rd5" name="tf3"> True <br>
-        <input type="radio" id="rd6" name="tf3"> False <br>
+        3) True or False: In 1980, Black Terns were listed as an endangered species in New York State <label
+            id="p3"></label><br />
+        <input type="radio" id="rd1" name="tf"> True <br>
+        <input type="radio" id="rd2" name="tf"> False <br>
         <label id="ans3"></label><br>
         <input type="button" value="submit" onclick="f1()"><br>
     </body>
