--- a/marsh_wren.html
+++ b/marsh_wren.html
@@ -11,5 +11,6 @@
            Marsh wrens are often seen bouncing around with their tails cocked in marshes filled with cattails and rushes. 
            They grasp stalks of vegetation, legs splayed with each foot wrapped around a different stalk. Males occasionally pop up to sing from taller cattails.
         </p>
+        <h3><a href="marsh_wren_excercises.html"> Exercises</a></h3>
     </body>
 </html>
