--- a/trumpeter_swan.html
+++ b/trumpeter_swan.html
@@ -12,4 +12,5 @@
            Trumpeter swans feed mostly on aquatic plants, but in winter they may also forage on waste grain and grasses in farm fields. 
            They breed in freshwater marshes and ponds. They favor large, shallow freshwater ponds or wide, slow-flowing rivers with lots of vegetation. 
            </p>
+        <h3><a href="trumpeter_swan_excercises.html"> Exercises</a></h3>
 </html>
