home page + menu

--- a/birds.html
+++ b/birds.html
@@ -15,7 +15,7 @@
     <input id="searchbar" onkeyup="search_animal()" type="text"
     name="search" placeholder="Search animals..">
            
-        <p><a href="home.html">Back to home</a></p>
+        <p><a href="home_content.html">Back to home</a></p>
         <!--create a div for "FWS Focus" loads of the birds are labeled with this (CSS)-->
         <div id="FWSFocus"></div>
         <ol>
