--- a/golden_eagle_excercises.html
+++ b/golden_eagle_excercises.html
@@ -8,6 +8,7 @@
                     p1.style.color = "green"
                 } else {
                     p1.innerHTML = "incorrect"
+                    p1.style.color = "red"
                     ans1.innerHTML = "correct answer: small birds, small mammals, deer"
                 }
 
@@ -16,6 +17,7 @@
                     p2.style.color = "green"
                 } else {
                     p2.innerHTML = "incorrect"
+                    p2.style.color = "red"
                     ans2.innerHTML = "correct answer: raptor"
                 }
                 if (rd2.checked) {
@@ -23,6 +25,7 @@
                     p3.style.color = "green"
                 } else {
                     p3.innerHTML = "incorrect"
+                    p3.style.color = "red"
                     ans3.innerHTML = "correct answer: humans"
                 }
             }
