Pending changes exported from your codespace

--- a/home.html
+++ b/home.html
@@ -1,12 +1,15 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
         <h1>Home</h1>
-        <p>Home page</p>
-
+        <div class="content">
+        <h2><a href="aboutUs.html">About Us</a></h2>
+        <h2><a href="whatWedo.html">What We Do</a></h2>
+        <h2><a href="birds.html">Birds</a></h2>
+        </div>
     </body>
 </html>
     
