excercise answer fixes

--- a/golden_eagle_excercises.html
+++ b/golden_eagle_excercises.html
@@ -10,6 +10,7 @@
                     p1.innerHTML = "incorrect"
                     p1.style.color = "red"
                     ans1.innerHTML = "correct answer: small birds, small mammals, deer"
+                    ans1.style.color = "purple"
                 }
 
                 if (txtbox1.value == "raptor") {
@@ -19,6 +20,7 @@
                     p2.innerHTML = "incorrect"
                     p2.style.color = "red"
                     ans2.innerHTML = "correct answer: raptor"
+                    ans2.style.color = "purple"
                 }
                 if (rd2.checked) {
                     p3.innerHTML = "correct!"
@@ -27,6 +29,7 @@
                     p3.innerHTML = "incorrect"
                     p3.style.color = "red"
                     ans3.innerHTML = "correct answer: humans"
+                    ans3.style.color = "purple"
                 }
             }
         </script>
