--- a/long_tailed_duck_excercises.html
+++ b/long_tailed_duck_excercises.html
@@ -10,6 +10,7 @@
                     p1.innerHTML = "Incorrect"
                     p1.style.color = "red"
                     ans1.innerHTML = "correct answer: Saltwater environments"
+                    ans1.style.color = "purple"
                 }
                 if (rd6.checked) {
                     p2.innerHTML = "Correct!"
@@ -18,6 +19,7 @@
                     p2.innerHTML = "Incorrect"
                     p2.style.color = "red"
                     ans2.innerHTML = "correct answer: It turns mostly white with rich brown, black, and gray on the face in summer."
+                    ans2.style.color = "purple"
                 }
                 if (rd8.checked) {
                     p3.innerHTML = "Correct!"
@@ -26,6 +28,7 @@
                     p3.innerHTML = "Incorrect"
                     p3.style.color = "red"
                     ans3.innerHTML = "correct answer: They can be affected by oil spills and pollution"
+                    ans3.style.color = "purple"
                 }
             }
         </script>
