--- a/piping_plover_excercises.html
+++ b/piping_plover_excercises.html
@@ -10,6 +10,7 @@
                     p1.innerHTML = "Incorrect"
                     p1.style.color = "red"
                     ans1.innerHTML = "correct answer: gulls, feral cats and raccoons"
+                    ans1.style.color = "purple"
                 }
 
                 if (txtbox1.value == "North America" || txtbox1.value == "north america") {
@@ -19,6 +20,7 @@
                     p2.innerHTML = "Incorrect"
                     p2.style.color = "red"
                     ans2.innerHTML = "correct answer: North America"
+                    ans2.style.color = "purple"
                 }
                 if (rd1.checked) {
                     p3.innerHTML = "Correct!"
@@ -27,6 +29,7 @@
                     p3.innerHTML = "Incorrect"
                     p3.style.color = "red"
                     ans3.innerHTML = "correct answer: True"
+                    ans3.style.color = "purple"
                 }
             }
         </script>
