--- a/semipalmated_sandpiper_excercises.html
+++ b/semipalmated_sandpiper_excercises.html
@@ -9,7 +9,8 @@
                 } else {
                     p1.innerHTML = "Incorrect"
                     p1.style.color = "red"
-                    ans3.innerHTML = "correct answer: grayish-brown"
+                    ans1.innerHTML = "correct answer: grayish-brown"
+                    ans1.style.color = "purple"
                 }
                 if (rd6.checked) {
                     p2.innerHTML = "Correct!"
@@ -17,7 +18,8 @@
                 } else {
                     p2.innerHTML = "Incorrect"
                     p2.style.color = "red"
-                    ans3.innerHTML = "correct answer: coastal South America"
+                    ans2.innerHTML = "correct answer: coastal South America"
+                    ans2.style.color = "purple"
                 }
                 if (rd8.checked) {
                     p3.innerHTML = "Correct!"
@@ -26,6 +28,7 @@
                     p3.innerHTML = "Incorrect"
                     p3.style.color = "red"
                     ans3.innerHTML = "correct answer: northern Alaska"
+                    ans3.style.color = "purple"
                 }
             }
         </script>
