--- a/trumpeter_swan_excercises.html
+++ b/trumpeter_swan_excercises.html
@@ -10,6 +10,7 @@
                     p1.innerHTML = "Incorrect"
                     p1.style.color = "red"
                     ans1.innerHTML = "correct answer: True"
+                    ans1.style.color = "purple"
                 }
 
                 if (txtbox1.value == "Europe" || txtbox1.value == "europe") {
@@ -19,6 +20,7 @@
                     p2.innerHTML = "Incorrect"
                     p2.style.color = "red"
                     ans2.innerHTML = "correct answer: Europe"
+                    ans2.style.color = "purple"
                 }
 
                 if (txtbox2.value == "marshes" || txtbox3.value == "ponds") {
@@ -28,6 +30,7 @@
                     p3.innerHTML = "Incorrect"
                     p3.style.color = "red"
                     ans3.innerHTML = "correct answer: marshes, ponds"
+                    ans3.style.color = "purple"
                 }
             }
         </script>
