--- a/burrowing_owl_excercises.html
+++ b/burrowing_owl_excercises.html
@@ -10,6 +10,7 @@
                     p1.innerHTML = "Incorrect"
                     p1.style.color = "red"
                     ans1.innerHTML = "correct answer: Habitat loss, Pesticide use and Poisoning of prairie dog colonies"
+                    ans1.style.color = "purple"
                 }
 
                 if (txtbox1.value == "Athene cunicularia" || txtbox1.value == "Athene") {
@@ -19,6 +20,7 @@
                     p2.innerHTML = "Incorrect"
                     p2.style.color = "red"
                     ans2.innerHTML = "correct answer: Athene or Athene cunicularia"
+                    ans2.style.color = "purple"
                 }
                 if (rd1.checked) {
                     p3.innerHTML = "Correct!"
@@ -27,6 +29,7 @@
                     p3.innerHTML = "Incorrect"
                     p3.style.color = "red"
                     ans3.innerHTML = "correct answer: True"
+                    ans3.style.color = "purple"
                 }
             }
         </script>
