--- a/chesnut-collared_longspur_excercises.html
+++ b/chesnut-collared_longspur_excercises.html
@@ -9,7 +9,8 @@
                 } else {
                     p1.innerHTML = "Incorrect"
                     p1.style.color = "red"
-                    ans3.innerHTML = "correct answer: True"
+                    ans1.innerHTML = "correct answer: True"
+                    ans1.style.color = "purple"
                 }
                 if (rd4.checked) {
                     p2.innerHTML = "Correct!"
@@ -18,6 +19,7 @@
                     p2.innerHTML = "Incorrect"
                     p2.style.color = "red"
                     ans2.innerHTML = "correct answer: False"
+                    ans2.style.color = "purple"
                 }
                 if (rd5.checked) {
                     p3.innerHTML = "Correct!"
@@ -26,6 +28,7 @@
                     p3.innerHTML = "Incorrect"
                     p3.style.color = "red"
                     ans3.innerHTML = "correct answer: True"
+                    ans3.style.color = "purple"
                 }
             }
         </script>
