--- a/marsh_wren_excercises.html
+++ b/marsh_wren_excercises.html
@@ -10,6 +10,7 @@
                     p1.innerHTML="incorrect"
                     p1.style.color="red"
                     ans1.innerHTML = "correct answer: black and white streaks, broad white eyeline, a brown cap"
+                    ans1.style.color = "purple"
                 }
                 if(rd1.checked){
                     p2.innerHTML="correct!"
@@ -18,6 +19,7 @@
                     p2.innerHTML="incorrect"
                     p2.style.color="red"
                     ans2.innerHTML = "correct answer: True"
+                    ans2.style.color = "purple"
                 }
                 if(rd3.checked){
                     p3.innerHTML="correct!"
@@ -26,6 +28,7 @@
                     p3.innerHTML="incorrect"
                     p3.style.color="red"
                     ans3.innerHTML = "correct answer: True"
+                    ans3.style.color = "purple"
                 }
             }
         </script>
