--- a/northern_harrier_excercises.html
+++ b/northern_harrier_excercises.html
@@ -10,6 +10,7 @@
                     p1.innerHTML = "Incorrect"
                     p1.style.color = "red"
                     ans1.innerHTML = "correct answer: False"
+                    ans1.style.color = "purple"
                 }
                 if (rd3.checked) {
                     p2.innerHTML = "Correct!"
@@ -18,6 +19,7 @@
                     p2.innerHTML = "Incorrect"
                     p2.style.color = "red"
                     ans2.innerHTML = "correct answer: True"
+                    ans2.style.color = "purple"
                 }
                 if (rd6.checked) {
                     p3.innerHTML = "Correct!"
@@ -26,6 +28,7 @@
                     p3.innerHTML = "Incorrect"
                     p3.style.color = "red"
                     ans3.innerHTML = "correct answer: False"
+                    ans3.style.color = "purple"
                 }
             }
         </script>
