fixed the search issue

--- a/birds.html
+++ b/birds.html
@@ -25,7 +25,7 @@
             <li class="birds"><h3><a href="golden_eagle.html">Golden Eagle</a></h3>
 
         <!--Italicize the scientific name--> 
-            <h4>Aquila chysaetos</h4></li>
+            <h4>Aquila chysaetos</h4>
         <!--format images-->
             <img src="https://observation.org/media/photo/15930515.jpg" alt="Golden Eagle" height="150">
             <h5>INFORMATION:</h5>
