--- a/home_content.html
+++ b/home_content.html
@@ -5,6 +5,7 @@
     </head>
 
     <body>
+        <div id="content">
         <p><br>Bosque del Apache National Wildlife Refuge is located in San Antonio, Socorro County, New Mexico. Situated
             between the Chupadera Mountains to the west and the San Pascual Mountains to the east, the 57,331 acre Bosque
             del Apache was established in 1939 to provide a critical stopover site for migrating waterfowl. The refuge is
@@ -20,6 +21,7 @@
             1001 State Highway 1<br>
             ​San Antonio, NM 87832</p><br>
         </br>
+        </div>
     </body>
 
 </html>
