--- a/black_tern.html
+++ b/black_tern.html
@@ -14,7 +14,7 @@
            The Black Tern has been declining since the mid-1960s. In 2000, they were listed as an endangered species in New York State. 
         </p>
         <h3><a href="black_tern_excercises.html"> Exercises</a></h3>
-         <p><a href=”birds.html”>Back</a></p>
+         <p><a href="birds.html">Back</a></p>
         </div>
 
 
