--- a/long_tailed_duck.html
+++ b/long_tailed_duck.html
@@ -17,7 +17,7 @@
              Large numbers are sometimes caught and killed in fishing nets. 
             </p>
            <h3><a href="long_tailed_duck_excercises.html"> Exercises</a></h3>
-            <p><a href=”birds.html”>Back</a></p>
+            <p><a href="birds.html">Back</a></p>
         </div>
 
 
