--- a/long_tailed_duck.html
+++ b/long_tailed_duck.html
@@ -6,7 +6,8 @@
 
         <div id=”content”>
         <h1>Long-Tailed Duck</h1>
-        
+        <img src="https://media.audubon.org/nas_birdapi_hero/h_apa_2016-a1_1665_1_long-tailed-duck_gail_bisson_kk_summer-adult-male.jpg" height="150">
+
         <p>The long-tailed duck is a diving duck that favors saltwater in winter and Arctic tundra pools in summer. It has a small bill, round body, and short, pointed, dark wings. 
             It is 16.5 inches long, has a wingspan of 28 inches, and weighs 1.6 lbs. 
             The long-tailed duck has two mirror-image plumages: 
